--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,12 @@
   align-items: center;
   justify-content: center;
   /* background-color: antiquewhite; */
+  overflow: hidden;
+}
+.videoContainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
