--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,11 @@
   top: 0;
   left: 0;
 }
+.videoContainerOuter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.378);
+}
