added submit btn and date picker

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,17 @@
   left: 0;
   background-color: rgba(255, 255, 255, 0.378);
 }
+
+.sc-kpOJdX.nYegl {
+  width: 100%;
+}
+.sc-kpOJdX.nYegl label {
+  font-family: "Vazirmatn", sans-serif;
+  color: rgb(16, 62, 62);
+  width: 100%;
+  box-sizing: border-box;
+  padding-right: 10px;
+  font-size: 14px;
+  text-align: end;
+
+}
