--- a/src/Component/Register.module.css
+++ b/src/Component/Register.module.css
@@ -24,4 +24,36 @@
   justify-content: flex-end;
   width: 100%;
 }
+.submitContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+}
 
+.submitBtnStyle {
+  width: 150px;
+  height: 45px;
+  background-color: rgb(2, 117, 63);
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #fff;
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  transform: translate(3px, -3px);
+  transition: all 0.3s ease-out;
+  box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.submitBtnStyle:hover {
+  box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3);
+  transform: translate(0);
+  
+}
+.submitBtnStyle:active {
+  transform: translate(0) scale(1.1);
+}
