--- a/src/Component/Register.module.css
+++ b/src/Component/Register.module.css
@@ -57,3 +57,10 @@
 .submitBtnStyle:active {
   transform: translate(0) scale(1.1);
 }
+.disableBtnStyles {
+  cursor: not-allowed;
+  opacity: 0.7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
