refactored registerig flow

--- a/src/Component/CusotmComponents/Modal/Modal.module.css
+++ b/src/Component/CusotmComponents/Modal/Modal.module.css
@@ -33,6 +33,7 @@
   margin: 15px !important;
 }
 .modalMessageStyle {
+  font-family: "Vazirmatn", sans-serif;
 }
 .modalBntStyles {
   width: 100px;
