--- a/src/Component/CusotmComponents/DatePicker/MyDatePicker.module.css
+++ b/src/Component/CusotmComponents/DatePicker/MyDatePicker.module.css
@@ -27,3 +27,9 @@
   border: 1px solid rgba(0, 130, 130, 0.668);
   outline: 4px solid rgba(0, 130, 130, 0.191);
 }
+
+@media (max-width: 550px) {
+  .datePicker {
+    margin-bottom: 7px;
+  }
+}
