--- a/src/Component/Register.module.css
+++ b/src/Component/Register.module.css
@@ -64,3 +64,16 @@
   align-items: center;
   justify-content: center;
 }
+@media (max-width: 550px) {
+  .formContainer{
+    
+    width: 300px !important;
+    min-height: 400px !important;
+  }
+  .formTitle {
+    margin: 10px 0 !important;
+  }
+  .submitContainer {
+    margin-bottom: 15px;
+  }
+}
